--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "concurrently \"nodemon server.js \" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -19,8 +18,11 @@
   },
   "homepage": "https://github.com/vvvmvvv/Angular-TodoList#readme",
   "dependencies": {
+    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongojs": "^3.1.0"
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.9.12"
   }
 }
