--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ node_modules/
 # Optional npm cache directory
 .npm
 
-# dotenv environment variables file
-.env
+# # dotenv environment variables file
+# .env
 .env.test
