--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"nodemon server.js \" \"cd client && npm start\""
+    "start": "concurrently \"node server.js \" \"cd client && npm start\"",
+    "postinstall": "cd client && ng build --aot --prod"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,9 @@
     "express": "^4.17.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.12"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.14.4"
   }
 }
