--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
     "path": "^0.12.7",
