solving heroku problem v2

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "client": {
+    "angular-heroku": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/client",
+            "outputPath": "dist/angular-heroku",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -118,14 +118,14 @@
           },
           "configurations": {
             "production": {
-              "devServerTarget": "client:serve:production"
+              "devServerTarget": "angular-heroku:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "client",
+  "defaultProject": "angular-heroku",
   "cli": {
     "analytics": "e4ebd9e5-e111-46af-9fed-343d9272d1b8"
   }
