--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angular-heroku",
   "version": "0.0.0",
   "scripts": {
+    "prestart": "ng build",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
